--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,15 @@
 #spring.datasource.time-between-eviction-runs-millis=18800
 #spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 ##################################--mysql--###########################################
-spring.datasource.url=jdbc:mysql://localhost:3306/renren-security?useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
+#online
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/renren-security?useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
+#spring.datasource.username=root
+#spring.datasource.password=sr123456
+#dev
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/renren-security?useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # ·½ÑÔ
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
